--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 1.9.3 (unreleased)
 ------------------
 
-- added Hide/unhide Report Sheets feature.
+- added Hide/unhide Report Sheets feature, including evolve5.py script.
 
 
 1.9.2 (2011-11-02)
