--- a/src/schooltool/gradebook/locales/th.po
+++ b/src/schooltool/gradebook/locales/th.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: schooltool.gradebook\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-02-01 15:02-0500\n"
-"PO-Revision-Date: 2013-03-12 03:08+0000\n"
+"PO-Revision-Date: 2013-04-04 19:47+0200\n"
 "Last-Translator: mathinan <mathinan@jaansi.com>\n"
 "Language-Team: Thai <th@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-13 04:50+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-28 05:07+0000\n"
+"X-Generator: Launchpad (build 16546)\n"
 
 #: /src/schooltool/gradebook/activity.py:52
 msgid "Sheet1"
@@ -226,7 +226,7 @@ msgstr "รายละเอียดของคะแนนภายนอก
 #: /src/schooltool/gradebook/browser/activity.py:524
 #: /src/schooltool/gradebook/browser/report_card.py:751
 msgid "Change information for ${fullname}"
-msgstr ""
+msgstr "เปลี่ยนแปลงข้อมูลสำหรับ ${fullname}"
 
 #: /src/schooltool/gradebook/browser/activity.py:558
 msgid "Edit External Activity"
@@ -234,11 +234,11 @@ msgstr "แก้ไขกิจกรรมนอกห้องเรียน
 
 #: /src/schooltool/gradebook/browser/activity.py:618
 msgid "Category weights for worksheet ${worksheet}"
-msgstr ""
+msgstr "นำหนักชองประเภทสำหรับ ${worksheet}"
 
 #: /src/schooltool/gradebook/browser/activity.py:640
 msgid "$value is not a valid weight."
-msgstr ""
+msgstr "$value เป็นค่าน้ำหนักที่ไม่ถูกต้อง"
 
 #: /src/schooltool/gradebook/browser/activity.py:648
 msgid "Category weights must add up to 100."
@@ -507,7 +507,7 @@ msgstr "รวมทั้งปี"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:308
 msgid "Worksheets for ${year}"
-msgstr ""
+msgstr "เอกสารสำหรับปี ${year}"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:329
 #: /src/schooltool/gradebook/browser/report_card.py:290
@@ -861,7 +861,7 @@ msgstr "ถัดไป"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:1691
 msgid "Enter grades for ${fullname}"
-msgstr ""
+msgstr "กรอกเกรดสำหรับ ${fullname}"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:1641
 msgid "Enter grade details below"
@@ -878,11 +878,11 @@ msgstr "ลบคะแนน"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:1945
 msgid "$worksheet for $student in $section"
-msgstr ""
+msgstr "$worksheetสำหรับ $student ในเซกชั่น $section"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:1790
 msgid "${section} grades for ${worksheet}"
-msgstr ""
+msgstr "${section} grades for ${worksheet}"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:2191
 msgid "Score this"
@@ -1014,7 +1014,7 @@ msgstr "ค่า"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:245
 msgid "Report Card: ${schoolyear}"
-msgstr ""
+msgstr "รายงานผลการเรียน: ${schoolyear}"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:209
 #: /src/schooltool/gradebook/browser/pdf_views.py:326
@@ -1023,11 +1023,11 @@ msgstr "หลักสูตร"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:220
 msgid "Student: ${student}"
-msgstr ""
+msgstr "นักเรียน: ${student}"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:331
 msgid "Detailed Student Report: ${schoolyear}"
-msgstr ""
+msgstr "รายงานรายละเอียดนักเรียน: ${schoolyear}"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:323
 msgid "Grade Detail"
@@ -1109,7 +1109,7 @@ msgstr "รายงานระดับผลการเรียน"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:927
 msgid "Instructors: ${instructors}"
-msgstr ""
+msgstr "ผู้สอน: ${instructors}"
 
 #: /src/schooltool/gradebook/browser/report.zcml:10
 msgid "Contains scores from report sheets.  Formatted to be sent to parents."
@@ -1154,19 +1154,19 @@ msgstr "สาย"
 
 #: /src/schooltool/gradebook/browser/report_card.py:68
 msgid "A"
-msgstr ""
+msgstr "A"
 
 #: /src/schooltool/gradebook/browser/report_card.py:69
 msgid "T"
-msgstr ""
+msgstr "T"
 
 #: /src/schooltool/gradebook/browser/report_card.py:254
 msgid "Report Sheets for ${year}"
-msgstr ""
+msgstr "รายงานสำหรับปี ${year}"
 
 #: /src/schooltool/gradebook/browser/report_card.py:399
 msgid "Hide/unhide Report Sheets for ${year}"
-msgstr ""
+msgstr "ซ่อน/ไม่ซ่อนรายงานสำหรับปี ${year}"
 
 #: /src/schooltool/gradebook/browser/report_card.py:461
 msgid "Report Sheet Template Details"
@@ -1491,12 +1491,12 @@ msgstr "เซกชั่นนี้ประกอบด้วยแผ่น
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:8
 msgid "You can ${unhide_worksheets}, or ${add_worksheet}."
-msgstr ""
+msgstr "คุณสามารถ ${unhide_worksheets} หรือ ${add_worksheet}."
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:117
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:247
 msgid "S"
-msgstr ""
+msgstr "S"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:117
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:247
@@ -1554,7 +1554,7 @@ msgstr "ขั้นตอนแรกคือสร้างแม่แบบ
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_templates_related.pt:15
 msgid "After you create a template, the next step is to ${deploy-sheet}"
-msgstr ""
+msgstr "หลังจากคูณสร้างแม่แบบ ขั้นต่อไปก็คือเพื่อ ${deploy-sheet}"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_templates_related.pt:15
 msgid "deploy it to teacher gradebooks."
@@ -1614,11 +1614,11 @@ msgstr "จัดการแผ่นงานหลักสูตรวิช
 
 #: /src/schooltool/gradebook/browser/templates/f_manage_course_worksheets.pt:15
 msgid "There are ${count} course worksheets for ${schoolyear}"
-msgstr ""
+msgstr "มี ${count} เอกสารวิชา สำหรับปี ${schoolyear}"
 
 #: /src/schooltool/gradebook/browser/templates/f_manage_course_worksheets.pt:19
 msgid "There are no course worksheets for ${schoolyear}"
-msgstr ""
+msgstr "ไม่มีเอกสารวิชาสำหรับปี ${schoolyear}"
 
 #: /src/schooltool/gradebook/browser/templates/f_manage_report_sheet_templates_overview.pt:5
 msgid "Manage Report Sheet Templates"
@@ -1626,7 +1626,7 @@ msgstr "จัดการแม่แบบรายงาน"
 
 #: /src/schooltool/gradebook/browser/templates/f_manage_report_sheet_templates_overview.pt:14
 msgid "There are ${count} report sheet templates set up."
-msgstr ""
+msgstr "มีแม่แบบรายงาน ${count} รายการ"
 
 #: /src/schooltool/gradebook/browser/templates/f_manage_report_sheet_templates_overview.pt:17
 #: /src/schooltool/gradebook/browser/templates/f_templates_overview.pt:17
@@ -1806,7 +1806,7 @@ msgstr "เลือกปีการศึกษาหรือภาคเร
 
 #: /src/schooltool/gradebook/browser/templates/f_student_grade_history.pt:5
 msgid "${student_name} was never scored in this worksheet."
-msgstr ""
+msgstr "${student_name} ที่ยังไม่ถูกเติมคะแนนในเอกสารนี้"
 
 #: /src/schooltool/gradebook/browser/templates/f_student_grade_history.pt:14
 msgid "Evaluator"
@@ -1956,7 +1956,7 @@ msgstr "สร้างแผ่นงานการสรุปผล"
 
 #: /src/schooltool/gradebook/browser/templates/gradebook_grade_activity.pt:18
 msgid "Grade ${name}"
-msgstr ""
+msgstr "เกรด ${name}"
 
 #: /src/schooltool/gradebook/browser/templates/gradebook_grade_activity.pt:47
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:181
@@ -1975,7 +1975,7 @@ msgstr "เซกชั่น"
 
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:98
 msgid "show only activities due in past ${num_weeks} weeks"
-msgstr ""
+msgstr "แสดงกิจกรรมที่ผ่านมา ${num_weeks} สัปดาห์เท่านั้น"
 
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:141
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:154
@@ -2053,7 +2053,7 @@ msgstr "รายงาน"
 
 #: /src/schooltool/gradebook/browser/templates/report_worksheet_overview.pt:9
 msgid "Activities of ${title}"
-msgstr ""
+msgstr "กิจกรรมของ${title}"
 
 #: /src/schooltool/gradebook/browser/templates/report_worksheet_overview.pt:14
 #: /src/schooltool/gradebook/browser/templates/worksheet_overview.pt:14
@@ -2156,7 +2156,7 @@ msgstr "ระบุวิชาในสมุดรายงานผลกา
 
 #: /src/schooltool/gradebook/interfaces.py:166
 msgid "The date the activity is due to be graded."
-msgstr ""
+msgstr "อ"
 
 #: /src/schooltool/gradebook/interfaces.py:139
 msgid "The column label for the activity in the gradebook."
@@ -2431,11 +2431,11 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/requirement.pt:5
 msgid "${requirement} Contents"
-msgstr ""
+msgstr "${requirement} Contents"
 
 #: /src/schooltool/requirement/browser/requirement.pt:11
 msgid "${requirement} Sub Requirements"
-msgstr ""
+msgstr "${requirement} Sub Requirements"
 
 #: /src/schooltool/requirement/browser/requirement.pt:20
 msgid "Find Now"
@@ -2447,7 +2447,7 @@ msgstr "ล้าง"
 
 #: /src/schooltool/requirement/browser/requirement.pt:32
 msgid "Showing ${count} of ${total} items"
-msgstr ""
+msgstr "กำลังแสดง ${count} ของ ${total} รายการ"
 
 #: /src/schooltool/requirement/browser/requirement.py:55
 msgid "Requirement index"
@@ -2503,11 +2503,11 @@ msgstr "ไม่อนุญาตให้ใช้ตัวย่อที่
 
 #: /src/schooltool/requirement/browser/scoresystem.py:265
 msgid "Yes"
-msgstr ""
+msgstr "ใช่"
 
 #: /src/schooltool/requirement/browser/scoresystem.py:267
 msgid "No"
-msgstr ""
+msgstr "ไม่ใช่"
 
 #: /src/schooltool/requirement/browser/scoresystem.py:291
 msgid "Existing Score System"
@@ -2519,7 +2519,7 @@ msgstr "ระบบคะแนนส่วนตัว"
 
 #: /src/schooltool/requirement/browser/scoresystem.py:504
 msgid "Hide ${scoresystem}"
-msgstr ""
+msgstr "ซ่อน ${scoresystem}"
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:23
 msgid ""
@@ -2534,10 +2534,12 @@ msgid ""
 "Start with the highest score. Click \"Add a lower score\" to add scores "
 "until you have created a score with a minimum percentage of 0."
 msgstr ""
+"เริ่มด้วยคะแนนสูงสุด คลิก 'เพิ่มคะแนนที่น้อยกว่า' "
+"เพื่อเพิ่มคะแนนจนกระทั่งคุณสร้างคะแนนเป็น 0"
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:80
 msgid "Add a lower score"
-msgstr ""
+msgstr "เพิ่มคะแนนที่น้อยกว่า"
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:83
 msgid ""
@@ -2548,8 +2550,8 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:98
 msgid "passing score:"
-msgstr ""
+msgstr "คะแนนที่ผ่าน:"
 
 #: /src/schooltool/requirement/browser/scoresystem_view.pt:3
 msgid "View Score System"
-msgstr ""
+msgstr "เรียกดูระบบคะแนน"
